--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 aniso8601==0.92
 Flask==0.10.1
+Flask-HTTPAuth==2.4.0
 Flask-RESTful==0.3.2
 Flask-RethinkDB==0.2
+Flask-SQLAlchemy==2.0
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
+passlib==1.6.2
 pytz==2014.10
 rethinkdb==1.16.0.post2
 six==1.9.0
+SQLAlchemy==0.9.9
 Werkzeug==0.10.1
